--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <section id="home" class="s-home page-hero target-section">
       <iframe
         class="bg-video"
-        src="https://www.youtube.com/embed/videoseries?si=jCrCSF-B7tbdCllF&amp;&autoplay=1&loop=1&amp;list=PLP-4sqIPYm7QD4_MdnMcp3mUbLe3Id3bZ"
+        src="https://www.youtube.com/embed/videoseries?si=jCrCSF-B7tbdCllF&amp;autoplay=1&loop=1&amp;list=PLP-4sqIPYm7QD4_MdnMcp3mUbLe3Id3bZ"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         frameborder="0"
       ></iframe>
