--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         src="https://www.youtube.com/embed/videoseries?si=jCrCSF-B7tbdCllF&amp;&loop=1&autoplay=1&mute=1&controlers=0&amp;list=PLP-4sqIPYm7QD4_MdnMcp3mUbLe3Id3bZ"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         frameborder="0"
+        allowfullscreen
       ></iframe>
 
       <div class="home-content">
